2006-12-20  Nurdin Premji  <npremji@redhat.com>

	* LinuxPtraceTaskState.java (.transitionToAttached): Removed taskStateAttached notify.
	* Task.java: Removed taskStateAttached.
	(notifyAttached): clear isa here, not with taskStateAttached.

2006-12-19  Andrew Cagney  <cagney@redhat.com>

	* IsaFactory.java: For i386, only return Ia32On64 when build
	system was x86-64.  HACK!!

2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* LinuxPtraceTaskState.java (.transitionToAttached): notify Task of 
	transition.
	* ProcBlockAction.java (ProcBlockAction): return/exit after addFailed call.
	* Task.java: Added variable taskStateAttached, fills isa on attach.
	(notifyExeced): Clear isa using clearIsa rather than isa = null.

2006-12-18  Nurdin Premji  <npremji@redhat.com>

	* TestProcStopped.java (MyTester.addFailed): Added.
	* TestProcForceDetach.java (MyProcBlockAction.addFailed): Added.
	* ProcBlockAction.java (ProcBlockAction): Added call to addFailed if proc
	has bad ownership.
	(deletedFrom): Added empty stub method here.	

2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserver.java (testDetachExitingMainTask)
	(testDetachExitingOtherTask): Note broken, 3737.
	* TestProcStopped.java (testMultiThreadedStoppedDetached)
	(testMultiThreadedStoppedAckDaemon): Note broken, 3595.
	* TestRefresh.java (testRefreshZombie): Note broken, 3488.
	* TestProcTasksObserver.java (testCloneThenKillAttached)
	(testDeleteAttached): Note broken, 3486.

	* TestTaskTerminateObserver.java (check): Mark anything involving
	exit(47) or SIGKILL as broken, 3489.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* ProcException.java: Removed.
	* ProcBlockAction.java: Reverted ProcException.
	* TestProcForceDetach: Ditto.
	* TestProcStopped: Ditto.

2006-12-15  Mike Cvet  <mcvet@redhat.com>

	* TestLib.java (AttachedSyscallDaemonProcess): Cleaned up, fixed.
	(AttachedSyscallDaemonProcess.deleteObservers): Added.

2006-12-15  Nurdin Premji  <npremji@redhat.com>
