@@ -1,5 +1,8 @@
 2006-12-20  Nurdin Premji  <npremji@redhat.com>
 
+	* ProcBlockAction.java (ProcBlockAction): Removed isOwned check as per 
+	bug 3774.
+	
 	* LinuxPtraceTaskState.java (.transitionToAttached): Removed taskStateAttached notify.
 	* Task.java: Removed taskStateAttached.
 	(notifyAttached): clear isa here, not with taskStateAttached.
